...

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_20sdp"/>

                    <Button
                        android:id="@+id/change_password_button"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/change_password_icon"
                        android:text="Change Password" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_20sdp"/>

                    <Button
...
